--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -78,6 +78,9 @@
     <Compile Include="Task4.Designer.cs">
       <DependentUpon>Task4.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Menu.resx">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
