--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -63,9 +63,7 @@
     <Compile Include="Task1.Designer.cs">
       <DependentUpon>Task1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Task2.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Task2.cs" />
     <Compile Include="Task2.Designer.cs">
       <DependentUpon>Task2.cs</DependentUpon>
     </Compile>
