--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -83,6 +83,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Task4Working.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Task4Working.Designer.cs">
+      <DependentUpon>Task4Working.cs</DependentUpon>
+    </Compile>
     <Compile Include="Secrets.cs" />
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -135,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Task4.resx">
       <DependentUpon>Task4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Task4Working.resx">
+      <DependentUpon>Task4Working.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
